--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "termprogress"
+description = "A terminal progress bar renderer with status and spinners"
+license = "GPL-3.0-or-later"
 version = "0.1.0"
 authors = ["Avril <flanchan@cumallover.me>"]
 edition = "2018"
