--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,16 @@
 name = "termprogress"
 description = "A terminal progress bar renderer with status and spinners"
 license = "GPL-3.0-or-later"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Avril <flanchan@cumallover.me>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["size"]
+
+size = ["terminal_size"]
+
 [dependencies]
-terminal_size = "0.1"
+terminal_size = {version = "0.1", optional = true}
