--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "termprogress"
 description = "A terminal progress bar renderer with status and spinners"
 license = "GPL-3.0-or-later"
-version = "0.2.4"
+version = "0.3.4"
 authors = ["Avril <flanchan@cumallover.me>"]
 edition = "2018"
 
@@ -15,3 +15,6 @@ size = ["terminal_size"]
 
 [dependencies]
 terminal_size = {version = "0.1", optional = true}
+[build-dependencies]
+rustc_version = "0.2"
+
