--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "termprogress"
 description = "A terminal progress bar renderer with status and spinners"
 license = "GPL-3.0-or-later"
-version = "1.0.0"
+version = "0.9.1"
 authors = ["Avril <flanchan@cumallover.me>"]
 edition = "2018"
 
@@ -18,6 +18,8 @@ size = ["terminal_size"]
 reactive = []
 
 [dependencies]
+atomic_refcell = "0.1.10"
+stackalloc = "1.2.0"
 terminal_size = {version = "0.1", optional = true}
 [build-dependencies]
 rustc_version = "0.2"
