--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "termprogress"
 description = "A terminal progress bar renderer with status and spinners"
 license = "GPL-3.0-or-later"
 # TODO: After full interface update & correction, bump version to `0.11.0` instead or a revision.
-version = "0.10.0-r1"
+version = "1.0.0-r0-pre"
 authors = ["Avril <flanchan@cumallover.me>"]
 edition = "2018"
 
